# MusicWalker

./: .all-contributorsrc  CMakeLists.txt  README.md  resource.rc
include/: AudioPlayer.h  MainWindow.h  PlayerArea.h  PlayerWidget.h  QueueManager.h
src/: AudioPlayer.cpp  MainWindow.cpp  PlayerArea.cpp  PlayerWidget.cpp  QueueManager.cpp
